--- a/notebooks/instructions.ipynb
+++ b/notebooks/instructions.ipynb
@@ -1427,6 +1427,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Gender',\n",
+       " 'Married',\n",
+       " 'Dependents',\n",
+       " 'Education',\n",
+       " 'Self Employed',\n",
+       " 'Credit History',\n",
+       " 'Property Area']"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_feats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self Employed</th>\n",
+       "      <th>Applicant Income</th>\n",
+       "      <th>Coapplicant Income</th>\n",
+       "      <th>Loan Amount</th>\n",
+       "      <th>Loan Amount Term</th>\n",
+       "      <th>Credit History</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Property Area</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rural</th>\n",
+       "      <td>142</td>\n",
+       "      <td>145</td>\n",
+       "      <td>143</td>\n",
+       "      <td>145</td>\n",
+       "      <td>138</td>\n",
+       "      <td>145</td>\n",
+       "      <td>145</td>\n",
+       "      <td>140</td>\n",
+       "      <td>141</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Semiurban</th>\n",
+       "      <td>183</td>\n",
+       "      <td>185</td>\n",
+       "      <td>181</td>\n",
+       "      <td>187</td>\n",
+       "      <td>178</td>\n",
+       "      <td>187</td>\n",
+       "      <td>187</td>\n",
+       "      <td>182</td>\n",
+       "      <td>184</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>158</td>\n",
+       "      <td>158</td>\n",
+       "      <td>153</td>\n",
+       "      <td>159</td>\n",
+       "      <td>151</td>\n",
+       "      <td>159</td>\n",
+       "      <td>159</td>\n",
+       "      <td>152</td>\n",
+       "      <td>153</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Gender  Married  Dependents  Education  Self Employed  \\\n",
+       "Property Area                                                          \n",
+       "Rural             142      145         143        145            138   \n",
+       "Semiurban         183      185         181        187            178   \n",
+       "Urban             158      158         153        159            151   \n",
+       "\n",
+       "               Applicant Income  Coapplicant Income  Loan Amount  \\\n",
+       "Property Area                                                      \n",
+       "Rural                       145                 145          140   \n",
+       "Semiurban                   187                 187          182   \n",
+       "Urban                       159                 159          152   \n",
+       "\n",
+       "               Loan Amount Term  Credit History  \n",
+       "Property Area                                    \n",
+       "Rural                       141             136  \n",
+       "Semiurban                   184             174  \n",
+       "Urban                       153             141  "
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.groupby('Property Area').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7807377049180327"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "381/488"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 181,
    "metadata": {},
    "outputs": [
