Added code references

--- a/notebooks/instructions.ipynb
+++ b/notebooks/instructions.ipynb
@@ -4151,6 +4151,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get feature importances from the model\n",
+    "# referenced https://stackoverflow.com/questions/38787612/how-to-extract-feature-importances-from-an-sklearn-pipeline\n",
+    "\n",
+    "\n",
     "# load model\n",
     "model = pickle.load( open( r\"..\\data\\rf_model1.pkl\", \"rb\" ) )\n",
     "\n",
@@ -4541,6 +4545,7 @@
    "outputs": [],
    "source": [
     "# Add a custom class to create Transformer to add a total income feature\n",
+    "# Referenced https://stackoverflow.com/questions/70638171/custom-transformer-to-add-additional-column to write custom class and integrate into pipeline\n",
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "\n",
